--- a/login.html
+++ b/login.html
@@ -36,15 +36,19 @@
         <div class="login-wrap">
             <form class="layui-form" action="">
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名"
+                    <i class="layui-icon layui-icon-username"></i>
+                    <!-- 需要使用 lay-verify 属性进行添加校验规则   如果有多个校验规则的话需要可以通过 | 隔开 -->
+                    <!-- 原生input输入框本身就有 required 属性，就表示此输入框是一个必填项 -->
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入密码"
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit>登录</button>
+                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit id="loginBtn">登录</button>
                 </div>
                 <div class="layui-form-item">
                     <a href="javascript:;" id="go2Reg">去注册</a>
@@ -52,21 +56,24 @@
             </form>
         </div>
         <div class="reg-wrap">
-            <form class="layui-form" action="">
+            <form class="layui-form" id="formReg">
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入用户名"
-                        autocomplete="off" class="layui-input">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input" value="qd51">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input id="password" type="password" name="password" required lay-verify="required|pwd"
+                        placeholder="请输入密码" autocomplete="off" class="layui-input" value="qd51qd51">
                 </div>
                 <div class="layui-form-item">
-                    <input type="text" name="title" required lay-verify="required" placeholder="请再次输入密码"
-                        autocomplete="off" class="layui-input">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd"
+                        placeholder="请再次输入密码" autocomplete="off" class="layui-input" value="qd51qd51">
                 </div>
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid" lay-submit>注册</button>
+                    <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit>注册</button>
                 </div>
                 <div class="layui-form-item">
                     <a href="javascript:;" id="go2Login">去登录</a>
@@ -75,9 +82,18 @@
         </div>
     </div>
 
-    <script src="/assets/lib/jquery.js"></script>
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
     <script src="/assets/js/login.js"></script>
+    <script>
+        function format2Json(target) {
+            target.split('&').reduce((prev, curr) => {
+                const kv = curr.split('=')
+                prev[kv[0]] = kv[1]
+                return prev
+            }, {})
+        }
+    </script>
 </body>
 
 </html>
