--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首页</title>
+    <title>首页123</title>
     <!-- 引入 layui 的css -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
@@ -20,11 +20,12 @@
             </div>
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item layui-hide layui-show-md-inline-block">
-                    <a href="javascript:;">
+                    <div class="user-box">
                         <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
                             class="layui-nav-img">
-                        管理员
-                    </a>
+                        <div class="text-avatar">黑</div>
+                        <div class="text">欢迎 黑马**</div>
+                    </div>
                     <dl class="layui-nav-child">
                         <dd><a href="">基本信息</a></dd>
                         <dd><a href="">更换头像</a></dd>
@@ -42,11 +43,23 @@
 
         <div class="layui-side layui-bg-black">
             <div class="layui-side-scroll">
+                <!-- 头像区域 -->
+                <div class="user-box">
+                    <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                        class="layui-nav-img">
+                    <div class="text-avatar">黑</div>
+                    <div class="text">欢迎 黑马**</div>
+                </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <!-- flex-shrink: 1 0   lay-shrink="all" 兄弟菜单产生互斥效果 -->
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all">
-                    <li class="layui-nav-item"><a href="javascript:;">
-                            <span class="iconfont icon-home"></span>首页</a></li>
+                    <li class="layui-nav-item layui-this">
+                        <!-- 指定页面在哪个地方打开 -->
+                        <a href="/home/dashboard.html" target="abc">
+                            <span class="iconfont icon-home"></span>
+                            首页
+                        </a>
+                    </li>
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;">
                             <span class="iconfont icon-pinglun"></span>文章管理</a>
@@ -72,7 +85,9 @@
         <div class="layui-body">
             <!-- 内容主体区域 -->
             <div style="padding: 15px;">
-                <h2>内容主体</h2>
+                <!-- iframe 标签，给定 src 属性可以用来显示第三方的链接：https html 页面 -->
+                <!-- name 属性，就相当于给 iframe 起了一个名字，方便后期找到它 -->
+                <iframe name="abc" src="/home/dashboard.html" />
             </div>
         </div>
 
@@ -81,10 +96,41 @@
             前端开发攻城狮
         </div>
     </div>
-    <script src="/assets/lib/layui/layui.all.js"></script>
-    <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/baseApi.js"></script>
-    <script src="/assets/js/index.js"></script>
+
+    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./assets/js/baseApi.js"></script>
+    <script src="./assets/js/index.js"></script>
+
+
+    <script>
+        //JS
+        layui.use(['element', 'layer', 'util'], function () {
+            var element = layui.element
+                , layer = layui.layer
+                , util = layui.util
+                , $ = layui.$;
+
+            //头部事件
+            util.event('lay-header-event', {
+                //左侧菜单事件
+                menuLeft: function (othis) {
+                    layer.msg('展开左侧菜单的操作', { icon: 0 });
+                }
+                , menuRight: function () {
+                    layer.open({
+                        type: 1
+                        , content: '<div style="padding: 15px;">处理右侧面板的操作</div>'
+                        , area: ['260px', '100%']
+                        , offset: 'rt' //右上角
+                        , anim: 5
+                        , shadeClose: true
+                    });
+                }
+            });
+
+        });
+    </script>
 </body>
 
 </html>
