完成了渲染头像的功能

--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
             <div style="padding: 15px;">
                 <!-- iframe 标签，给定 src 属性可以用来显示第三方的链接：https html 页面 -->
                 <!-- name 属性，就相当于给 iframe 起了一个名字，方便后期找到它 -->
-                <iframe name="abc" src="/home/dashboard.html" />
+                <iframe name="abc" src="/home/dashboard.html"></iframe>
             </div>
         </div>
 
