完成了用户信息相关的功能

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
                     <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
-                        autocomplete="off" class="layui-input" value="qd51qd51">
+                        autocomplete="off" class="layui-input" value="111111">
                 </div>
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit id="loginBtn">登录</button>
