--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -44,7 +44,7 @@
                 <!-- 通过 accept 指定用户可选择的文件类型 -->
                 <input type="file" id="file" accept="image/png,image/jpeg,image/gif" />
                 <button type="button" class="layui-btn" id="btnChoose">上传</button>
-                <button type="button" class="layui-btn layui-btn-danger">确定</button>
+                <button type="button" class="layui-btn layui-btn-danger" id="btnConfirm">确定</button>
             </div>
         </div>
     </div>
