--- a/home.html
+++ b/home.html
@@ -27,9 +27,9 @@
                         <div class="text">欢迎 黑马**</div>
                     </div>
                     <dl class="layui-nav-child">
-                        <dd><a href="/user/user_info.html" target="abc">基本信息</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本信息</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -55,7 +55,7 @@
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all">
                     <li class="layui-nav-item layui-this">
                         <!-- 指定页面在哪个地方打开 -->
-                        <a href="/home/dashboard.html" target="abc">
+                        <a href="/home/dashboard.html" target="fm">
                             <span class="iconfont icon-home"></span>
                             首页
                         </a>
@@ -73,11 +73,11 @@
                         <a href="javascript:;">
                             <span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/user/user_info.html" target="abc"><i
+                            <dd><a href="/user/user_info.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>基本信息</a></dd>
-                            <dd><a href="/user/user_avatar.html" target="abc"><i
+                            <dd><a href="/user/user_avatar.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href="/user/user_pwd.html" target="abc"><i
+                            <dd><a href="/user/user_pwd.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>重置密码</a></dd>
                         </dl>
                     </li>
@@ -89,7 +89,7 @@
             <!-- 内容主体区域 -->
             <!-- iframe 标签，给定 src 属性可以用来显示第三方的链接：https html 页面 -->
             <!-- name 属性，就相当于给 iframe 起了一个名字，方便后期找到它 -->
-            <iframe name="abc" src="/home/dashboard.html"></iframe>
+            <iframe name="fm" src="/home/dashboard.html"></iframe>
         </div>
 
         <div class="layui-footer">
