--- a/home.html
+++ b/home.html
@@ -64,7 +64,8 @@
                         <a class="" href="javascript:;">
                             <span class="iconfont icon-pinglun"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>分类管理</a></dd>
+                            <dd><a href="/cate/article_cate.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>分类管理</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>列表管理</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
                         </dl>
