--- a/home.html
+++ b/home.html
@@ -66,7 +66,8 @@
                         <dl class="layui-nav-child">
                             <dd><a href="/cate/article_cate.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>分类管理</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>列表管理</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>列表管理</a></dd>
                             <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
                         </dl>
                     </li>
