--- a/home.html
+++ b/home.html
@@ -68,7 +68,8 @@
                                         class="layui-icon layui-icon-app"></i>分类管理</a></dd>
                             <dd><a href="/article/art_list.html" target="fm"><i
                                         class="layui-icon layui-icon-app"></i>列表管理</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
